// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders a .Link by default 1`] = `
<div
  className="Link"
>
  <h2
    className="Link__title"
  >
    <Link
      replace={false}
      to="/link/undefined"
    />
  </h2>
  <button
    className="Link__delete"
    type="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="trash-alt"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
     
    remove
  </button>
  <div
    className="Link__dates"
  >
    <div
      className="Link__dates-modified"
    >
      Modified
       
      <span
        className="Date"
      >
        Invalid Date
      </span>
    </div>
  </div>
</div>
`;

exports[`Link component renders the Link given props 1`] = `
<div
  className="Link"
>
  <h2
    className="Link__title"
  >
    <Link
      replace={false}
      to="/link/a"
    >
      test-class-name
    </Link>
  </h2>
  <button
    className="Link__delete"
    type="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="trash-alt"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
     
    remove
  </button>
  <div
    className="Link__dates"
  >
    <div
      className="Link__dates-modified"
    >
      Modified
       
      <span
        className="Date"
      >
        15th Jan 2019
      </span>
    </div>
  </div>
</div>
`;
